--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- Section 1: Scrolling Text -->
   <section class="scrolling-text-section m-0">
     <div class="scrolling-text">
-        Dental Clinic Design <span></span> Hospital Design, Medical Office Design, Assisted Living Facility Design, Rehabilitation Center Design, Mental Health Facility Design
+        Dental Clinic Design, spaHospital Design, Medical Office Design, Assisted Living Facility Design, Rehabilitation Center Design, Mental Health Facility Design
         <span class="separator">|</span>
         Dental Clinic Design, Hospital Design, Medical Office Design, Assisted Living Facility Design, Rehabilitation Center Design, Mental Health Facility Design
     </div>
